--- a/cxutils.html
+++ b/cxutils.html
@@ -1097,7 +1097,8 @@ Description : cxutils.nim is a collection of utility procs and templates</pre>
 <dd>
 
 <p>cxVideoInfo</p>
-<p>executes a system command to get video setup information may show warning on certain systems to run as super user </p>
+<p>executes a system command to get video setup information may show warning on certain systems to run as super user</p>
+<p>lshw needs to be installed on your system see lshw man pages for much more </p>
 
 
 </dd>
@@ -1820,7 +1821,7 @@ reverse iterator<pre class="listing"><span class="Keyword">let</span> <span clas
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small>Made with Nim. Generated: 2019-09-19 02:34:25 UTC</small>
+        <small>Made with Nim. Generated: 2019-09-21 07:34:46 UTC</small>
       </div>
     </div>
   </div>
