--- a/cxnetwork.html
+++ b/cxnetwork.html
@@ -862,6 +862,8 @@ function main() {
     title="getHosts(dm: string): seq[string]"><wbr />get<wbr />Hosts<span class="attachedType"></span></a></li>
   <li><a class="reference" href="#showHosts%2Cstring"
     title="showHosts(dm: string)"><wbr />show<wbr />Hosts<span class="attachedType"></span></a></li>
+  <li><a class="reference" href="#wifistatus"
+    title="wifistatus()"><wbr />wifistatus<span class="attachedType"></span></a></li>
 
   </ul>
 </li>
@@ -1059,6 +1061,14 @@ function main() {
 <span class="Identifier">doFinish</span><span class="Punctuation">(</span><span class="Punctuation">)</span></pre>
 
 </dd>
+<a id="wifistatus"></a>
+<dt><pre><span class="Keyword">proc</span> <a href="#wifistatus"><span class="Identifier">wifistatus</span></a><span class="Other">(</span><span class="Other">)</span> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">OSError</span><span class="Other">,</span> <span class="Identifier">Exception</span><span class="Other">,</span> <span class="Identifier">IOError</span><span class="Other">,</span> <span class="Identifier">Defect</span><span class="Other">]</span><span class="Other">,</span>
+                  <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">ExecIOEffect</span><span class="Other">,</span> <span class="Identifier">ReadIOEffect</span><span class="Other">,</span> <span class="Identifier">RootEffect</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
+<dd>
+
+
+
+</dd>
 
 </dl></div>
 <div class="section" id="15">
@@ -1083,7 +1093,7 @@ function main() {
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small>Made with Nim. Generated: 2019-11-07 11:42:04 UTC</small>
+        <small>Made with Nim. Generated: 2019-11-19 13:45:45 UTC</small>
       </div>
     </div>
   </div>
